v1.1.0/modules/schema/pages/class/CommodityDefinition.adoc
= `CommodityDefinition`
:toclevels: 4


+++Commodities in the context of IEC 62325 are MarketProducts (energy, regulation, reserve, etc) traded at a specific location, which in this case is a Pnode (either a specific pricing node or a pricing area or zone defined as a collection of pricing nodes).  The CommodityDefinition is a container for these two parameters, plus the unit of measure and the currency in which the Commodity is traded.  Each CommodityDefinition should be relatively static; defined once and rarely changed.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CommodityDefinition`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`CommodityDefinition`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CommodityPrice,`CommodityPrice`>>
//| [[slots_table.CommodityPrice]]<<CommodityPrice,`CommodityPrice`>>
| 1..* +
xref::class/CommodityPrice.adoc[`CommodityPrice`]
| _n/a_
| _n/a_

| <<MarketProduct,`MarketProduct`>>
//| [[slots_table.MarketProduct]]<<MarketProduct,`MarketProduct`>>
| 1 +
xref::class/MarketProduct.adoc[`MarketProduct`]
| _n/a_
| _n/a_

| <<Pnode,`Pnode`>>
//| [[slots_table.Pnode]]<<Pnode,`Pnode`>>
| 1 +
xref::class/Pnode.adoc[`Pnode`]
| _n/a_
| _n/a_

| <<RTO,`RTO`>>
//| [[slots_table.RTO]]<<RTO,`RTO`>>
| 1 +
xref::class/RTO.adoc[`RTO`]
| _n/a_
| _n/a_

| <<commodityCurrency,`commodityCurrency`>>
//| [[slots_table.commodityCurrency]]<<commodityCurrency,`commodityCurrency`>>
| 0..1 +
xref::enumeration/Currency.adoc[`Currency`]
| +++The currency in which the Commodity is traded, using the standard conventions associated with the Currency enumeration.+++
| _n/a_

| <<commodityUnit,`commodityUnit`>>
//| [[slots_table.commodityUnit]]<<commodityUnit,`commodityUnit`>>
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++The unit of measure in which the Commodity is traded, using the standard conventions associated with the UnitSymbol enumeration.+++
| _n/a_

| <<commodityUnitMultiplier,`commodityUnitMultiplier`>>
//| [[slots_table.commodityUnitMultiplier]]<<commodityUnitMultiplier,`commodityUnitMultiplier`>>
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++The unit multiplier, e.g. "k" to convert the unit "W-h" to "kW-h", using the standard conventions associated with the...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#commodityCurrency]
=== `commodityCurrency`
+++The currency in which the Commodity is traded, using the standard conventions associated with the Currency enumeration.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CommodityDefinition.commodityCurrency`
| Cardinality
| 0..1
| Type
| xref::enumeration/Currency.adoc[`Currency`]


|===

////
[.text-left]
--
<<slots_table.commodityCurrency,&#10548;>>
--
////


//[discrete]
[#CommodityPrice]
=== `CommodityPrice`



[cols="h,4",width=65%]
|===
| URI
| `cim:CommodityDefinition.CommodityPrice`
| Cardinality
| 1..*
| Type
| xref::class/CommodityPrice.adoc[`CommodityPrice`]


|===

////
[.text-left]
--
<<slots_table.CommodityPrice,&#10548;>>
--
////


//[discrete]
[#commodityUnit]
=== `commodityUnit`
+++The unit of measure in which the Commodity is traded, using the standard conventions associated with the UnitSymbol enumeration.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CommodityDefinition.commodityUnit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]


|===

////
[.text-left]
--
<<slots_table.commodityUnit,&#10548;>>
--
////


//[discrete]
[#commodityUnitMultiplier]
=== `commodityUnitMultiplier`
+++The unit multiplier, e.g. "k" to convert the unit "W-h" to "kW-h", using the standard conventions associated with the UnitMultiplier enumeration.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CommodityDefinition.commodityUnitMultiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]


|===

////
[.text-left]
--
<<slots_table.commodityUnitMultiplier,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#MarketProduct]
=== `MarketProduct`



[cols="h,4",width=65%]
|===
| URI
| `cim:CommodityDefinition.MarketProduct`
| Cardinality
| 1
| Type
| xref::class/MarketProduct.adoc[`MarketProduct`]


|===

////
[.text-left]
--
<<slots_table.MarketProduct,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#Pnode]
=== `Pnode`



[cols="h,4",width=65%]
|===
| URI
| `cim:CommodityDefinition.Pnode`
| Cardinality
| 1
| Type
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.Pnode,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RTO]
=== `RTO`



[cols="h,4",width=65%]
|===
| URI
| `cim:CommodityDefinition.RTO`
| Cardinality
| 1
| Type
| xref::class/RTO.adoc[`RTO`]


|===

////
[.text-left]
--
<<slots_table.RTO,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CommodityPrice.adoc[`CommodityPrice`] | xref::class/CommodityPrice.adoc#CommodityDefinition[`CommodityDefinition`]



| xref::class/MarketProduct.adoc[`MarketProduct`] | xref::class/MarketProduct.adoc#CommodityDefinition[`CommodityDefinition`]



| xref::class/Pnode.adoc[`Pnode`] | xref::class/Pnode.adoc#CommodityDefinition[`CommodityDefinition`]



| xref::class/RTO.adoc[`RTO`] | xref::class/RTO.adoc#CommodityDefinition[`CommodityDefinition`]


|===

